--- a/assets/styled/css.css
+++ b/assets/styled/css.css
@@ -1,44 +1,220 @@
+/* import */
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+/* geral */
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 body{
-    background-color: #505050;
+    background-color: #272727;
+    background-image: url(../gfx/main.png);
+    background-repeat: repeat;
+    background-attachment: fixed;
+    color: #d7d7d7;
+    overflow-x: hidden;
+    display: block;
+    font-size: 14px;
+    height: 100%;
+    line-height: 18px;
 }
 
-/* form */
 
-form{
+
+
+
+/* nav */
+
+.navbar{
+    background-color: rgba(49,49,49,1);
+    display: flex;
+    height: 80px;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+}
+
+.navbar-container{
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+/* logo */
+
+#navbar-logo{
+    color: #698dc3;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    border-right: 1px solid #35383d;
+    padding: 30px;
+    transition: all 0.3s ease;
+}
+
+/* menu */
+
+.navbar-menu{
+    display: flex;
+    align-items: center;
+    list-style: none;
+}
+
+.navbar-item{
+    height: 45px;
+    text-transform: uppercase;
+}
+
+.navbar-item:hover{
+    border-bottom: 1px solid #698dc3;
+}
+
+.navbar-links{
+    color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
-    margin: 0;
+    width: 125px;
+    text-decoration: none;
+    height: 100%;
+    transition: all 0.3s ease;
+}
+
+.navbar-links.active{
+    border-bottom: 1px solid #698dc3;
+    color: #698dc3;
+}
+
+.navbar-links:hover{
+    color: #698dc3;
+    transition: all 0.3s ease;
+}
+
+/* button */
+
+.navbar-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 1rem;
+    width: 100%;
+}
+
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    padding: 10px 40px;
+    height: 100%;
+    width: 100%;
+    outline: none;
+    box-shadow: 0px 0px 0px 1px #35383d inset;
+    border-radius: 2px;
+    background: #2b2b2b;
+    border: 2px solid #1f2227;
+    color: #d7d7d7;
+    transition: all 0.3s ease;
+}
+
+.button:hover{
+    background-color: #698dc3;
+    border: 2px solid #698dc3;
+    color: #fff;
+    transition: all 0.3s ease-out;
+}
+
+
+
+
+
+/* form */
+
+.form{
+    padding: 30px 40px;
+    background-color: #313131;
+    border: 1px solid #1f2227;
+    border-radius: 2px;
+}
+
+/* main */
+
+.main-form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
+    margin: 0 auto;
+}
+
+.main-form-r{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 650px;
+    margin: 0 auto;
 }
 
 /* container */
 
 .container{
-    background-color: #313131;
     border-radius: 5px;
     width: 420px;
     max-width: 100%;
-    height: 100%;
-    padding: 30px 40px;
-    border: 1px solid #1f2227;
-    border-bottom: 1px solid #698dc3;
-    box-shadow: 0 0 100px #35383d;
+}
+
+/* header */
+
+.header{
+    padding: 20px 40px;
+    text-align: center;
+}
+
+.header h1{
+    font-weight: 100;
+    font-size: 40px;
+    color: #4f4f4f;
+}
+
+.header p{
+    color: #75797c;
+}
+
+.header a{
+    text-decoration: none;
+    color: #9a9a9a;
+    transition: all .3s ease-in;
+}
+
+.header a:hover{
+    color: #698dc3;
+    transition: all .5s ease-out;
 }
 
 /* group */
 
 .form-group{
-    margin-bottom: 5px;
-    padding-bottom: 20px;
     position: relative;
+    padding: 15px 0;
 }
 
 /* label */
@@ -48,11 +224,22 @@ form{
     font-weight: 600;
     font-size: 15px;
     margin-bottom: 5px;
-    color: rgb(150, 150, 150);
+    color: #9a9a9a;
     cursor: default;
 }
 
-/* input */
+/* required text */
+
+.form-group .required{
+    font-size: 11px;
+    font-weight: normal;
+    text-shadow: 0px 0px 0px 5px #c02222;
+    color: #c02222;
+    margin-left: 10px;
+    text-transform: uppercase;
+}
+
+/* input's */
 
 .form-group input{
     background: #2b2b2b;
@@ -77,79 +264,256 @@ form{
     border: 2px solid #698dc3;
 }
 
-/* button */
-
-.form-group input[type = 'submit']{
-    background: #2b2b2b;
-    border-radius: 3px;
-    border: 2px solid #1f2227;
-    box-shadow: 0px 0px 0px 1px #35383d inset;
-    color: rgb(150, 150, 150);
-    display: block;
-    padding: 10px;
-    font-size: 14px;
-    font-weight: 600;
+.form-group input[type = submit]{
     cursor: pointer;
-    width: 100%;
-    transition: all .3s ease;
 }
 
-.form-group input[type = 'submit']:hover{
+.form-group input[type = submit]:hover{
     background-color: #698dc3;
-    color: #fff;
     border: 2px solid #698dc3;
+    color: #fff;
 }
 
-/* required text */
 
-.form-group .required{
-    font-size: 11px;
-    text-shadow: 0px 0px 5px #c02222;
-    color: red;
-    margin-left: 5px;
-}
 
-/* p and link */
 
-.form-group p{
-    cursor: default;
-    color: #000;
+
+/* footer */
+
+#footer {
+    display: flex;
+    flex-direction: row;
+    background-color: #313131;
+    padding: 50px 0 50px 0;
+    height: 100%;
     width: 100%;
 }
 
-.form-group a{
-    text-decoration: none;
-    color: rgb(150, 150, 150);
-    border: none;
-    transition: all .3s ease-in;
+.footer-container{
+    width: 100%;
+    padding: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
-.form-group a:hover{
-    transition: all .5s ease-out;
-    color: #698dc3;
-    border-bottom: 1px solid #698dc3;
+.footer-container .grid_box{
+    height: 100%;
+    color: #d7d7d7;
+    position: relative;
 }
 
-/* info and error */
 
-.error{
-    text-shadow: 0px 0px 5px #a94442;
-    color: #a94442;
-    border-bottom: 1px solid #a94442;
-    border-radius: 2px;
-    margin-bottom: 20px;
-    padding: 10px;
-    width: 90%;
-    cursor: default;
+
+
+/* change input password */
+
+.form-group .icon-password{
+    position: absolute;
+    right: 15px;
+    transform: translate(0, -50%);
+    top: 60%;
+    cursor: pointer;
 }
 
-.info{
-    text-shadow: 0px 0px 5px green;
-    color: green;
-    border-bottom: 1px solid green;
-    border-radius: 2px;
-    margin-bottom: 20px;
-    padding: 10px;
-    width: 90%;
-    cursor: default;
+.fa, .icon-password{
+    font-size: 15px;
+    color: #7a797e;
+    cursor: pointer;
+}
+
+.fa:hover{
+    color: #d7d7d7;
+}
+
+
+
+/* scroll */
+
+::-webkit-scrollbar {
+    width: 0.7em;
+    height: 0.5em;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #698dc3;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #313131;
+}
+
+
+
+
+/* responsive */
+
+@media screen and (max-width: 1920px){
+    #footer{
+        height: 100%;
+        width: 100%;
+    }
+
+    .footer-container{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 40vh;
+        padding: 50px;
+    }
+
+    .footer-container .grid_box{
+        height: 50%;
+        margin-top: 20px;
+    }
+
+    .grid_box{
+        position: relative;
+        padding: 5px 0;
+    }
+}
+
+@media screen and (max-width: 900px){
+    #footer{
+        height: 100%;
+        width: 100%;
+    }
+
+    .footer-container{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 70vh;
+        padding: 0 40px;
+    }
+
+    .footer-container .grid_box{
+        height: 50%;
+        margin-top: 20px;
+    }
+
+    .grid_box{
+        position: relative;
+        padding: 5px 0;
+    }
+
+    .form{
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .header{
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .navbar-container{
+        display: flex;
+        justify-content: space-between;
+        height: 80px;
+        z-index: 1;
+        width: 100%;
+        max-width: 1300px;
+        padding: 0;
+    }
+
+    .navbar-menu{
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        top: -1000px;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: -1;
+    }
+
+    .navbar-menu.active{
+        background-color: #313131;
+        top: 100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 99;
+        height: 50vh;
+        font: 1.6rem;
+    }
+
+    #navbar-logo{
+        padding: 35px;
+        font-size: 30px;
+    }
+
+    .navbar-toggle .bar{
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.3s ease-in-out;
+        background-color: #fff;
+    }
+
+    .navbar-item{
+        width: 100%;
+    }
+
+    .navbar-links{
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: table;
+    }
+
+    .navbar-btn{
+        padding-bottom: 2rem;
+    }
+
+    .navbar-links.active{
+        color: #698dc3;
+        border: none;
+    }
+
+    .navbar-item:hover{
+        border: none;
+    }
+
+    .button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 250px;
+        height: 40px;
+        margin: 0;
+    }
+
+    #mobile-menu{
+        position: absolute;
+        top: 20%;
+        right: 5%;
+        transform: translate(5%, 20%);
+    }
+
+    #mobile-menu .bar{
+        background-color: #698dc3;
+    }
+
+    .navbar-toggle .bar{
+        display: block;
+        cursor: pointer;
+    }
+
+    #mobile-menu.is-active .bar{
+        background-color: #698dc3;
+    }
+
+    #mobile-menu.is-active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    #mobile-menu.is-active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    #mobile-menu.is-active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
 }
